[fix] excel 추출 : contract status에 따른 excel 추출 구현